# QOPS

./: .env  .git-blame-ignore-revs  .gitmodules  LICENSE  README.md  command.py  exe_fusion_qiskit.py  fusion.cpp  performanceModel.py  qiskitPerformanceModel.py  sub_cpu.ini  testFusion_noFinder.py
QiskitFusion/: dynamic_qiskit.hpp
Quokka/: README.md
Quokka/src/: common.c  common.h  gate.c  gate.h  init.c  init.h  main.c  makefile
circuit/: bv28.txt  ising32.txt  qaoa32.txt  qft24.txt  qft32.txt  qv24.txt  qv32.txt
fusion/: requirements.txt
fusion/circuit/: hs32.txt  qknn31.txt  sc24.txt
gui/: README.md  command.py  gui_controller.py  gui_ui.py  gui_ui.ui  svg_cpp.py  text_track.py
llvm-pass-qpgo/: .gitignore  CMakeLists.txt  LICENSE  README.md
llvm-pass-qpgo/python/: qviz.py
llvm-pass-qpgo/qpgo/: CMakeLists.txt  Qpgo.cpp  Qpgo.h
llvm-pass-qpgo/simplifiedStateVector/src/: Makefile  common.c  common.h  gate.c  gate.h  main.c  makefile  pgo.mk
log/: feature_one_qubit.csv  feature_two_qubit.csv  microbenchmark_result.csv
qcor-code/: .gitignore  LICENSE  README.md  f.qasm  h.cpp  hadamard.out  hadamard.qasm  makefile  pass.conf  test2.qasm  x.cpp
qcor-code/benchmarks/: NH_frz_P_sto3g.cpp  (+11 more)
qfusion-opt/: .gitignore  LICENSE  Makefile  README.md  ThreadPool.h  exe.sh  fusion.cpp  fusion_to_be_merged.cpp  requirements.txt  requirements.yml  set_cpu_freq.sh
qviz-gui/: LICENSE  README.md  command.py  gui_controller.py  gui_start.py  simulator_driver.py  svg_core.py
qviz_gui/: README.md  svg_mouse.py  svg_qasm.py  text_track.py
stateVector/: setup.sh
(+329 files in other folders)
